gnovm/tests/files/debug/debug.gnoa
package main

import (
	"errors"
)

//func gen() error {
//	return errors.New("xxx")
//}

func main() {
	r := errors.New("xxx")
	if r != nil {
		println("error: ", r.Error())
	}
}

// Output:
// error:  xxx
